@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: line 2:38 Cannot insert in a Subquery. Inserting to table  src1
